--- a/singlepageresume.html
+++ b/singlepageresume.html
@@ -501,7 +501,7 @@
         <div class="main-container">
             <div class="header">
                 <h1><i class="fas fa-file-alt"></i> Single Page ATS Resume Builder</h1>
-                <p>Create your complete ATS-optimized resume on one page</p>
+                <p>Create your complete AS-optimized resume on one page</p>
             </div>
 
             <div class="row g-0">
